--- a/package.json
+++ b/package.json
@@ -1,51 +1,15 @@
 {
-  "name": "awesome-book",
-  "version": "1.0.0",
-  "description": "Awesome-Book",
-  "private": true,
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/mock/fileMock.js"
-    },
-    "resetMocks": false,
-    "setupFiles": [
-      "jest-localstorage-mock"
-    ]
-  },
-  "scripts": {
-    "test": "jest --coverage",
-    "start": "webpack serve --open",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/asifaminisonline/Awesome-Book.git-.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/asifaminisonline/Awesome-Book.git-/issues"
-  },
-  "homepage": "https://github.com/asifaminisonline/Awesome-Book.git-#readme",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^6.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-dollar-sign": "^1.0.2",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jquery": "^1.5.1",
     "hint": "^7.1.3",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.3.1",
-    "jest-localstorage-mock": "^2.4.18",
-    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0",
-    "webpack": "^5.85.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.3.1"
+    "stylelint-scss": "^3.21.0"
   }
 }
